--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,11 +31,13 @@ section#telefone {
     height: 627px;
     width: 311px;
     background: url('../imagens/frame-iphone.png') no-repeat;
-}iframe#tela {
+}
+
+iframe#tela {
     position: relative;
     top: 80px;
     left: 20px;
-    width: 269px;
+    width: 267px;
     height: 471px;
 }
 
